fixed small bug on iphone 11 view

--- a/src/app/modules/about/components/skills/skills.component.scss
+++ b/src/app/modules/about/components/skills/skills.component.scss
@@ -3,7 +3,7 @@
     width: 25vw;
     min-width: 250px;
     min-height: 100px;
-    margin-bottom: 20px;
+    margin: 20px;
     .skill-header {
       color: #ff5722;
     }
